@@ -3,14 +3,15 @@
  * Copyright Red Hat Inc. and Hibernate Authors
  */
 import org.apache.tools.ant.filters.ReplaceTokens
+import org.gradle.api.internal.provider.DefaultProvider
 
 plugins {
 	id 'java-gradle-plugin'
-	id "local.module"
+	id "local.java-module"
 	id "local.javadoc"
 	id "local.code-quality"
 
-	id 'com.gradle.plugin-publish' version '1.2.1'
+	id 'com.gradle.plugin-publish' version '2.0.0'
 	// for local publishing
 	id 'maven-publish'
 }
@@ -31,10 +32,10 @@ dependencies {
 
 	testImplementation gradleTestKit()
 	testImplementation testLibs.assertjCore
-	testImplementation testLibs.junit5Api
+	testImplementation testLibs.junitJupiterApi
 
-	testRuntimeOnly testLibs.junit5Engine
-	testRuntimeOnly testLibs.junit5Launcher
+	testRuntimeOnly testLibs.junitJupiterEngine
+	testRuntimeOnly testLibs.junitJupiterLauncher
 }
 
 gradlePlugin {
@@ -62,6 +63,10 @@ test {
 	if ( project.hasProperty( 'excludeTests' ) ) {
 		exclude project.property( 'excludeTests' ) as String
 	}
+    systemProperty("orm.gradle.min", project.property("orm.gradle.min"))
+	jvmArgs("--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED",
+			"--add-opens", "java.base/java.util=ALL-UNNAMED",
+			"--add-opens", "java.base/java.util.concurrent.atomic=ALL-UNNAMED")
 }
 
 def releasePrepareTask = tasks.register("releasePrepare") {
@@ -116,10 +121,41 @@ if ( !jdkVersions.explicit ) {
 else {
 	logger.warn( "[WARN] Toolchains are not yet supported for Groovy compilation." +
 						 " Using the JDK that runs Gradle for Groovy compilation." )
+	if ( jdkVersions.test.explicit && jdkVersions.test.launcher.asInt() > jdkVersions.min.asInt() ) {
+		// Configure the gradle plugin to also compile test to at most the orm.jdk.min version,
+		// because the test will have to be able to run with a JVM of version orm.jdk.min
+		tasks.named( "compileTestJava", JavaCompile ).configure {
+			options.release = Math.min( jdkVersions.test.compiler.asInt(), jdkVersions.min.asInt() )
+		}
+		// Must configure the test launcher to a version <= orm.jdk.max, because the tests invoke gradle,
+		// which inherently can only run with a JDK up to orm.jdk.max.
+		// Since we only support running Gradle with JDKs in the range of orm.jdk.min up to orm.jdk.max,
+		// we use a test java launcher for the latest available/configured JDK version
+		tasks.named( "test", Test ).configure {
+			def launcher = javaToolchains.launcherFor {
+				languageVersion = jdkVersions.min
+			}
+			for ( int version = jdkVersions.min.asInt() + 1; version <= jdkVersions.max.asInt(); version++ ) {
+				launcher = new DefaultProvider(() -> {
+					try {
+						return javaToolchains.launcherFor {
+							languageVersion = JavaLanguageVersion.of( version )
+						}.get()
+					}
+					catch (GradleException ex) {
+						// JavaToolchainQueryService unfortunately throws an exception if a version is not found,
+						// so we have to catch the exception and return null here to allow a fallback
+						return null
+					}
+				}).orElse( launcher )
+			}
+			javaLauncher = launcher
+		}
+	}
 }
 
-tasks.publish.enabled !ormBuildDetails.hibernateVersion.isSnapshot
-tasks.publishPlugins.enabled !ormBuildDetails.hibernateVersion.isSnapshot
+tasks.publish.enabled = !ormBuildDetails.hibernateVersion.isSnapshot
+tasks.publishPlugins.enabled = !ormBuildDetails.hibernateVersion.isSnapshot
 
 gradle.taskGraph.whenReady { tg ->
 	// local publishing (SNAPSHOT testing), cont.
@@ -136,19 +172,19 @@ gradle.taskGraph.whenReady { tg ->
 	}
 
 	// verify credentials for publishing the plugin up front to avoid any work (only if we are publishing)
-	if ( tg.hasTask( ":publishPlugins" ) && project.tasks.publishPlugins.enabled  ) {
+	if ( tg.hasTask( tasks.publishPlugins ) && project.tasks.publishPlugins.enabled  ) {
 		// we are publishing the plugin - make sure there is a credentials pair
 		//
 		// first, check the `GRADLE_PUBLISH_KEY` / `GRADLE_PUBLISH_SECRET` combo (env vars)
 		// and then the `gradle.publish.key` / `gradle.publish.secret` combo (project prop)
 		//		- see https://docs.gradle.org/current/userguide/publishing_gradle_plugins.html#account_setup
 		if ( System.getenv().get("GRADLE_PUBLISH_KEY") != null ) {
-			if ( System.getenv().get("GRADLE_PUBLISH_SECRET") != null ) {
+			if ( System.getenv().get("GRADLE_PUBLISH_SECRET") == null ) {
 				throw new RuntimeException( "`GRADLE_PUBLISH_KEY` specified, but not `GRADLE_PUBLISH_SECRET` for publishing Gradle plugin" )
 			}
 		}
 		else if ( project.findProperty( 'gradle.publish.key' ) != null ) {
-			if ( project.findProperty( 'gradle.publish.secret' ) != null ) {
+			if ( project.findProperty( 'gradle.publish.secret' ) == null ) {
 				throw new RuntimeException( "`gradle.publish.key` specified, but not `gradle.publish.secret` for publishing Gradle plugin" )
 			}
 		}
